--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,6 +68,7 @@
             android:background="@drawable/button_background"
             android:textColor="@color/button_text_color"
             android:fontFamily="@font/cabin_sketch"
+            android:contentDescription="@string/login_button_text"
             app:layout_constraintTop_toBottomOf="@id/et_login_password"
             app:layout_constraintBottom_toTopOf="@id/ll_signup"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,6 +90,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/cabin_sketch"
                 android:text="@string/login_new_user"
+                android:textColor="@color/colorPrimaryText"
                 android:layout_marginEnd="@dimen/login_sign_up_end_margin"/>
 
             <TextView
@@ -96,6 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/cabin_sketch"
+                android:textColor="@color/colorPrimaryText"
                 android:focusable="true"
                 android:clickable="true"
                 android:autoLink="web"
