--- a/app/src/main/res/layout/fragment_script_details.xml
+++ b/app/src/main/res/layout/fragment_script_details.xml
@@ -58,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_play"
+            android:contentDescription="@string/play_script"
             fab:fab_colorNormal="@color/colorAccent"
             fab:fab_size="mini"
             fab:fab_title="@string/play_script"
@@ -68,6 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_edit_script"
+            android:contentDescription="@string/edit_script"
             fab:fab_colorNormal="@color/colorAccent"
             fab:fab_size="mini"
             fab:fab_title="@string/edit_script"
@@ -78,6 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_delete"
+            android:contentDescription="@string/delete_script"
             fab:fab_colorNormal="@color/colorAccent"
             fab:fab_size="mini"
             fab:fab_title="@string/delete_script"
