feat: Added App Widget - initial coding.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,6 @@
 
     <color name="play_script_text_color_light">#111111</color>
     <color name="play_script_background_color_light">#fdfdfd</color>
+
+    <color name="widget_list_item_background_color">#ffffff</color>
 </resources>
