--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,5 +24,6 @@
     <color name="play_script_text_color_light">#111111</color>
     <color name="play_script_background_color_light">#fdfdfd</color>
 
-    <color name="widget_list_item_background_color">#ffffff</color>
+    <color name="widget_background_color">#ffffff</color>
+
 </resources>
