--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -54,5 +54,11 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">8dp</dimen>
+    <dimen name="widget_title_height">56dp</dimen>
+    <dimen name="widget_min_width">250dp</dimen>
+    <dimen name="widget_min_height">110dp</dimen>
+    <dimen name="widget_text_margin">8dp</dimen>
+    <dimen name="widget_text_size">16sp</dimen>
+    <dimen name="widget_double_text_margin">16dp</dimen>
 
 </resources>
