--- a/app/src/main/res/layout/fragment_script_edit.xml
+++ b/app/src/main/res/layout/fragment_script_edit.xml
@@ -46,6 +46,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:fabSize="normal"/>
 
+    <FrameLayout
+        android:id="@+id/fl_progress_holder"
+        android:animateLayoutChanges="true"
+        android:visibility="gone"
+        android:alpha="0.4"
+        android:background="@color/progress_overlay_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:layout_gravity="center"
+            android:id="@+id/details_progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
