--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -49,10 +49,6 @@
     <dimen name="signup_good_text_size">32dp</dimen>
     <dimen name="signup_description_text_size">16dp</dimen>
 
-    <!--
-Refer to App Widget Documentation for margin information
-http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
-    -->
     <dimen name="widget_margin">8dp</dimen>
     <dimen name="widget_title_height">56dp</dimen>
     <dimen name="widget_min_width">250dp</dimen>
@@ -60,5 +56,7 @@ http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     <dimen name="widget_text_margin">8dp</dimen>
     <dimen name="widget_text_size">16sp</dimen>
     <dimen name="widget_double_text_margin">16dp</dimen>
+
+    <dimen name="empty_view_icon_width">180dp</dimen>
 
 </resources>
