refactor: added ripple effect to list item

--- a/app/src/main/res/layout/script_list_item.xml
+++ b/app/src/main/res/layout/script_list_item.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_script_list_item"
-    android:background="@drawable/script_list_item_selector"
+    android:background="@drawable/list_item_background"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?attr/selectableItemBackground"
     android:paddingTop="@dimen/script_item_padding_top"
     android:paddingStart="@dimen/list_item_margin_start"
     android:paddingEnd="@dimen/list_item_margin_end">
