--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,13 @@
                 android:background="@color/colorPrimary"
                 android:elevation="@dimen/toolbar_elevation"
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+
+                <ImageView
+                    android:layout_width="@dimen/app_bar_image_width"
+                    android:layout_height="@dimen/app_bar_title_height"
+                    android:src="@drawable/promptastic_name"/>
+            </androidx.appcompat.widget.Toolbar>
 
             <FrameLayout
                 android:id="@+id/view_container"
