--- a/app/src/main/res/layout/script_list_item.xml
+++ b/app/src/main/res/layout/script_list_item.xml
@@ -4,16 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv_script_list_item"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
-    android:minHeight="?android:attr/listPreferredItemHeight"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
+    android:layout_height="wrap_content"
+    android:minHeight="@dimen/card_height"
+    android:layout_marginTop="@dimen/card_margin_top_bottom"
+    android:layout_marginBottom="@dimen/card_margin_top_bottom"
+    android:layout_marginStart="@dimen/card_margin_side"
+    android:layout_marginEnd="@dimen/card_margin_side"
     android:clickable="true"
     android:focusable="true"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="1dp">
+    app:cardCornerRadius="@dimen/card_corner_radius"
+    app:cardElevation="@dimen/card_elevation">
 
     <LinearLayout
         android:id="@+id/ll_script_list_item"
