--- a/app/src/main/res/layout/activity_play_script.xml
+++ b/app/src/main/res/layout/activity_play_script.xml
@@ -37,12 +37,14 @@
         android:visibility="gone">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            style="@style/fab_style"
             android:id="@+id/fab_stop_script"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_stop"
             android:layout_marginBottom="@dimen/pause_stop_margin"
-            app:fab_size="normal"/>
+            app:fab_size="normal"
+            app:tint="@color/fab_icon_white"/>
 
         <be.rijckaert.tim.animatedvector.FloatingMusicActionButton
             android:id="@+id/fab_pause_script"
@@ -52,6 +54,7 @@
             android:layout_marginBottom="@dimen/fab_margin_bottom"
             android:layout_marginEnd="@dimen/fab_margin_end"
             app:fab_size="normal"
+            app:tint="@color/fab_icon_white"
             app:mode="pauseToPlay"/>
 
     </LinearLayout>
