--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -3,4 +3,7 @@
 
     <dimen name="login_margin_start">64dp</dimen>
     <dimen name="login_margin_end">64dp</dimen>
+    <dimen name="card_elevation">0dp</dimen>
+
+    <dimen name="card_margin_side">16dp</dimen>
 </resources>
