refactor: extracted dimensions for intro slider

--- a/app/src/main/res/layout/intro_slide_1.xml
+++ b/app/src/main/res/layout/intro_slide_1.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/iv_slide_idea_1"
-        android:layout_width="250dp"
-        android:layout_height="350dp"
+        android:layout_width="@dimen/intro_image_width"
+        android:layout_height="@dimen/intro_image_height"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,11 +21,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/cabin_sketch"
-        android:textSize="18sp"
+        android:textSize="@dimen/intro_text_size"
         android:gravity="center"
         android:layout_marginStart="@dimen/activity_default_margin"
         android:layout_marginEnd="@dimen/activity_default_margin"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/intro_text_margin_top"
         android:text="@string/intro_slide_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
