--- a/app/src/main/res/layout/intro_slide_2.xml
+++ b/app/src/main/res/layout/intro_slide_2.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/iv_slide_phone"
-        android:layout_width="240dp"
-        android:layout_height="350dp"
+        android:layout_width="@dimen/intro_image_width"
+        android:layout_height="@dimen/intro_image_height"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,8 +23,8 @@
         android:gravity="center"
         android:layout_marginStart="@dimen/activity_default_margin"
         android:layout_marginEnd="@dimen/activity_default_margin"
-        android:layout_marginTop="8dp"
-        android:textSize="18sp"
+        android:layout_marginTop="@dimen/intro_text_margin_top"
+        android:textSize="@dimen/intro_text_size"
         android:text="@string/intro_slide_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
