--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,15 +59,13 @@
 
         <Button
             android:id="@+id/bt_login"
+            style="@style/login_signup_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login_button_text"
             android:layout_marginStart="@dimen/login_margin_start"
             android:layout_marginEnd="@dimen/login_margin_end"
             android:layout_marginTop="@dimen/login_button_top_margin"
-            android:background="@drawable/button_background"
-            android:textColor="@color/button_text_color"
-            android:fontFamily="@font/cabin_sketch"
             android:contentDescription="@string/login_button_text"
             app:layout_constraintTop_toBottomOf="@id/et_login_password"
             app:layout_constraintBottom_toTopOf="@id/ll_signup"
