--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,13 @@
         <item name="android:textColor">@color/colorAccent</item>
     </style>
 
+    <style name="login_signup_button" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="backgroundTint">@color/colorAccent</item>
+        <item name="android:textColor">@color/fab_icon_white</item>
+        <item name="android:fontFamily">@font/cabin_sketch</item>
+
+    </style>
+
     <style name="AppTheme.PlayScript" parent="@style/AppTheme">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
