--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -8,8 +8,11 @@
     android:background="@color/colorPrimary">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/iv_header_photo"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:clickable="true"
+        android:focusable="true"
         android:src="@drawable/promptastic_logo_only"
         android:layout_marginBottom="16dp"/>
 
